feat(card): improve specificity of selectable label

--- a/src/patternfly/components/Card/card.scss
+++ b/src/patternfly/components/Card/card.scss
@@ -153,58 +153,6 @@
     box-shadow: none; // box-shadow will come from the input's ::before instead of the card so remove this so there's isn't a double shadow
   }
 
-  .pf-c-card__selectable-actions .pf-c-check__label,
-  .pf-c-card__selectable-actions .pf-c-radio__label {
-    position: absolute;
-    inset: 0;
-    cursor: pointer;
-
-    &::before {
-      position: absolute;
-      inset: 0;
-      z-index: -1;
-      content: '';
-      background-color: var(--pf-c-card--BackgroundColor, transparent);
-      border: var(--pf-c-card--m-selectable--BorderWidth) solid var(--pf-c-card--BorderColor, transparent);
-      box-shadow: var(--pf-c-card--BoxShadow, none);
-    }
-
-    &:hover {
-      --pf-c-card--BackgroundColor: var(--pf-c-card--m-selectable--hover--BackgroundColor);
-      --pf-c-card--BoxShadow: var(--pf-c-card--m-selectable--hover--BoxShadow);
-    }
-  }
-
-  // Selected card
-  .pf-c-card__selectable-actions .pf-c-check__input:where(:checked) ~ .pf-c-check__label,
-  .pf-c-card__selectable-actions .pf-c-radio__input:where(:checked) ~ .pf-c-radio__label,
-  &.pf-m-selected {
-    --pf-c-card--BorderColor: var(--pf-c-card--m-selectable--m-selected--BorderColor);
-    --pf-c-card--BackgroundColor: var(--pf-c-card--m-selectable--m-selected--BackgroundColor);
-  }
-
-  // Focus on the card (label)
-  .pf-c-card__selectable-actions .pf-c-check__input:where(:focus-visible) ~ .pf-c-check__label,
-  .pf-c-card__selectable-actions .pf-c-radio__input:where(:focus-visible) ~ .pf-c-radio__label {
-    --pf-c-card--BorderColor: var(--pf-c-card--m-selectable--focus--BorderColor);
-    --pf-c-card--BackgroundColor: var(--pf-c-card--m-selectable--focus--BackgroundColor);
-  }
-
-  // Focus on a selected card
-  .pf-c-card__selectable-actions .pf-c-check__input:where(:focus-visible):where(:checked) ~ .pf-c-check__label,
-  .pf-c-card__selectable-actions .pf-c-radio__input:where(:focus-visible):where(:checked) ~ .pf-c-radio__label {
-    --pf-c-card--BorderColor: var(--pf-c-card--m-selectable--m-selected--focus--BorderColor);
-  }
-
-  // Disabled card
-  .pf-c-card__selectable-actions .pf-c-check__input:where(:disabled) ~ .pf-c-check__label,
-  .pf-c-card__selectable-actions .pf-c-radio__input:where(:disabled) ~ .pf-c-radio__label,
-  &.pf-m-disabled {
-    --pf-c-card--BackgroundColor: var(--pf-c-card--m-selectable--m-disabled--BackgroundColor);
-    --pf-c-card--BorderColor: var(--pf-c-card--m-selectable--m-disabled--BorderColor);
-    --pf-c-card--BoxShadow: var(--pf-c-card--m-selectable--m-disabled--BoxShadow);
-  }
-
   // stylelint-disable selector-max-class
   // Cards that are selectable AND clickable
   &.pf-m-selectable.pf-m-clickable {
@@ -256,7 +204,7 @@
       --pf-c-card--BoxShadow: var(--pf-c-card--m-selectable--m-disabled--BoxShadow);
     }    
   }
-    // stylelint-enable selector-max-class 
+  // stylelint-enable selector-max-class 
  
   // RAISED CARDS
   &.pf-m-hoverable-raised,
@@ -446,6 +394,59 @@
     --pf-c-card__actions--MarginTop: 0;
     --pf-c-card__actions--MarginBottom: 0;
   }
+}
+
+// Labels are used to handle states of selectable and clickable cards
+.pf-c-card__selectable-actions .pf-c-check__label,
+.pf-c-card__selectable-actions .pf-c-radio__label {
+  position: absolute;
+  inset: 0;
+  cursor: pointer;
+
+  &::before {
+    position: absolute;
+    inset: 0;
+    z-index: -1;
+    content: '';
+    background-color: var(--pf-c-card--BackgroundColor, transparent);
+    border: var(--pf-c-card--m-selectable--BorderWidth) solid var(--pf-c-card--BorderColor, transparent);
+    box-shadow: var(--pf-c-card--BoxShadow, none);
+  }
+
+  &:hover {
+    --pf-c-card--BackgroundColor: var(--pf-c-card--m-selectable--hover--BackgroundColor);
+    --pf-c-card--BoxShadow: var(--pf-c-card--m-selectable--hover--BoxShadow);
+  }
+}
+
+// Selected card
+.pf-c-card__selectable-actions .pf-c-check__input:where(:checked) ~ .pf-c-check__label,
+.pf-c-card__selectable-actions .pf-c-radio__input:where(:checked) ~ .pf-c-radio__label,
+.pf-c-card.pf-m-selected {
+  --pf-c-card--BorderColor: var(--pf-c-card--m-selectable--m-selected--BorderColor);
+  --pf-c-card--BackgroundColor: var(--pf-c-card--m-selectable--m-selected--BackgroundColor);
+}
+
+// Focus on the card (label)
+.pf-c-card__selectable-actions .pf-c-check__input:where(:focus-visible) ~ .pf-c-check__label,
+.pf-c-card__selectable-actions .pf-c-radio__input:where(:focus-visible) ~ .pf-c-radio__label {
+  --pf-c-card--BorderColor: var(--pf-c-card--m-selectable--focus--BorderColor);
+  --pf-c-card--BackgroundColor: var(--pf-c-card--m-selectable--focus--BackgroundColor);
+}
+
+// Focus on a selected card
+.pf-c-card__selectable-actions .pf-c-check__input:where(:focus-visible):where(:checked) ~ .pf-c-check__label,
+.pf-c-card__selectable-actions .pf-c-radio__input:where(:focus-visible):where(:checked) ~ .pf-c-radio__label {
+  --pf-c-card--BorderColor: var(--pf-c-card--m-selectable--m-selected--focus--BorderColor);
+}
+
+// Disabled card
+.pf-c-card__selectable-actions .pf-c-check__input:where(:disabled) ~ .pf-c-check__label,
+.pf-c-card__selectable-actions .pf-c-radio__input:where(:disabled) ~ .pf-c-radio__label,
+.pf-c-card.pf-m-disabled {
+  --pf-c-card--BackgroundColor: var(--pf-c-card--m-selectable--m-disabled--BackgroundColor);
+  --pf-c-card--BorderColor: var(--pf-c-card--m-selectable--m-disabled--BorderColor);
+  --pf-c-card--BoxShadow: var(--pf-c-card--m-selectable--m-disabled--BoxShadow);
 }
 
 .pf-c-card__header,
