--- a/src/patternfly/components/Card/card--check.hbs
+++ b/src/patternfly/components/Card/card--check.hbs
@@ -1,3 +1,6 @@
 {{#> check check--modifier="pf-m-standalone"}}
-  {{> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-label="' card--id ' checkbox"')}}
+  {{#> check-input check-input--attribute=(concat 'id="' card--id '-check" name="' card--id '-check" aria-labelledby="' card--id ' "')}}{{/check-input}}
+  {{#if card--IsSelectable}}
+    {{#> check-label check-label--attribute=(concat 'id="' card--id '-check-label" name="' card--id '-check" for="' card--id '-check" name="' card--id '-check"')}}{{/check-label}}
+  {{/if}}
 {{/check}}
