feat(form-control): fix focus area and examples

--- a/src/patternfly/components/FormControl/form-control-select.hbs
+++ b/src/patternfly/components/FormControl/form-control-select.hbs
@@ -1,5 +1,5 @@
-<div class="pf-c-form-control pf-c-form-control-select{{#if form-control-select--IsExpanded}} pf-m-expanded{{/if}}{{#if form-control-select--modifier}} {{form-control-select--modifier}}{{/if}}">
-  <select class=""
+<div class="pf-c-form-control pf-c-form-control-select">
+  <select class="pf-c-form-control {{#if form-control-select--IsExpanded}} pf-m-expanded{{/if}}{{#if form-control-select--modifier}} {{form-control-select--modifier}}{{/if}}"
     {{#if form-control-select--attribute}}
       {{{form-control-select--attribute}}}
     {{/if}}
