feat(version): updated generate scripts

--- a/scripts/template/src/patternfly/{folder}/{name}/{nameDasherized}.hbs
+++ b/scripts/template/src/patternfly/{folder}/{name}/{nameDasherized}.hbs
@@ -1,4 +1,4 @@
-<div class="{nameBEM}{{#if {nameDasherized}--modifier}} {{{nameDasherized}--modifier}}{{/if}}"
+<div class="{{pfv}}{nameDasherized}{{#if {nameDasherized}--modifier}} {{{nameDasherized}--modifier}}{{/if}}"
   {{#if {nameDasherized}--attribute}}
     {{{{nameDasherized}--attribute}}}
   {{/if}}>
