feat(version): updated pf-v5- to {{pfv}}

--- a/src/patternfly/components/ModalBox/modal-box-title.hbs
+++ b/src/patternfly/components/ModalBox/modal-box-title.hbs
@@ -6,7 +6,7 @@
     {{> modal-box-title-icon}}
   {{/if}}
   {{#if modal-box--IsAlert}}
-    <span class="pf-v5-u-screen-reader">
+    <span class="{{pfv 'u'}}screen-reader">
       {{#if modal-box--IsCustomAlert}}
         Default
       {{else if modal-box--IsInfoAlert}}
