--- a/src/patternfly/components/Wizard/wizard-toggle-separator.hbs
+++ b/src/patternfly/components/Wizard/wizard-toggle-separator.hbs
@@ -1,1 +1,1 @@
-<i class="fas fa-angle-right pf-v5-c-wizard__toggle-separator" aria-hidden="true"></i>
+<i class="fas fa-angle-right {{pfv}}wizard__toggle-separator" aria-hidden="true"></i>
