--- a/src/patternfly/demos/Card/templates/card-demo--popover-table.hbs
+++ b/src/patternfly/demos/Card/templates/card-demo--popover-table.hbs
@@ -21,7 +21,7 @@
       {{/table-td}}
       {{#> table-td table-td--data-label="Pull requests"}}
         {{#> table-text}}
-          20%&nbsp;<i class="fas fa-exclamation-circle pf-v5-u-danger-color-200" aria-hidden="true"></i>
+          20%&nbsp;<i class="fas fa-exclamation-circle {{pfv 'u'}}danger-color-200" aria-hidden="true"></i>
         {{/table-text}}
       {{/table-td}}
     {{/table-tr}}
@@ -52,7 +52,7 @@
       {{/table-td}}
       {{#> table-td table-td--data-label="Pull requests"}}
         {{#> table-text}}
-          100%&nbsp;<i class="fas fa-check-circle pf-v5-u-success-color-200" aria-hidden="true"></i>
+          100%&nbsp;<i class="fas fa-check-circle {{pfv 'u'}}success-color-200" aria-hidden="true"></i>
         {{/table-text}}
       {{/table-td}}
     {{/table-tr}}
@@ -76,7 +76,7 @@
       {{/table-td}}
       {{#> table-td table-td--data-label="Pull requests"}}
         {{#> table-text}}
-          100%&nbsp;<i class="fas fa-check-circle pf-v5-u-success-color-200" aria-hidden="true"></i>
+          100%&nbsp;<i class="fas fa-check-circle {{pfv 'u'}}success-color-200" aria-hidden="true"></i>
         {{/table-text}}
       {{/table-td}}
     {{/table-tr}}
@@ -100,7 +100,7 @@
       {{/table-td}}
       {{#> table-td table-td--data-label="Pull requests"}}
         {{#> table-text}}
-          91%&nbsp;<i class="fas fa-check-circle pf-v5-u-success-color-200" aria-hidden="true"></i>
+          91%&nbsp;<i class="fas fa-check-circle {{pfv 'u'}}success-color-200" aria-hidden="true"></i>
         {{/table-text}}
       {{/table-td}}
     {{/table-tr}}
