--- a/src/patternfly/demos/Card/templates/card-demo--template-gallery.hbs
+++ b/src/patternfly/demos/Card/templates/card-demo--template-gallery.hbs
@@ -2,7 +2,7 @@
     {{#> card card--id="card-empty-state" card--modifier="pf-m-selectable-raised pf-m-compact"}}
       {{#> bullseye}}
         {{#> empty-state empty-state--modifier="pf-m-xs"}}
-          <i class="fas fa-plus-circle pf-v5-c-empty-state__icon"></i>
+          <i class="fas fa-plus-circle {{pfv}}empty-state__icon"></i>
           {{#> title titleType="h2" title--modifier="pf-m-md"}}
             Add a new card to your page
           {{/title}}
