--- a/src/patternfly/demos/Card/templates/card-template-data-list.hbs
+++ b/src/patternfly/demos/Card/templates/card-template-data-list.hbs
@@ -18,7 +18,7 @@
               <a href="#">
                 {{#> l-flex l-flex--modifier="pf-m-space-items-sm"}}
                   <span>3</span>
-                  <i class="fas fa-check-circle pf-v5-u-success-color-100" aria-hidden="true"></i>
+                  <i class="fas fa-check-circle {{pfv 'u'}}success-color-100" aria-hidden="true"></i>
                 {{/l-flex}}
               </a>
             {{/data-list-cell}}
@@ -35,7 +35,7 @@
               <a href="#">
                 {{#> l-flex l-flex--modifier="pf-m-space-items-sm"}}
                   <span>8</span>
-                  <i class="fas fa-check-circle pf-v5-u-success-color-100" aria-hidden="true"></i>
+                  <i class="fas fa-check-circle {{pfv 'u'}}success-color-100" aria-hidden="true"></i>
                 {{/l-flex}}
               </a>
             {{/data-list-cell}}
@@ -52,7 +52,7 @@
               <a href="#">
                 {{#> l-flex l-flex--modifier="pf-m-space-items-sm"}}
                   <span>20</span>
-                  <i class="fas fa-check-circle pf-v5-u-success-color-100" aria-hidden="true"></i>
+                  <i class="fas fa-check-circle {{pfv 'u'}}success-color-100" aria-hidden="true"></i>
                 {{/l-flex}}
               </a>
             {{/data-list-cell}}
@@ -69,7 +69,7 @@
               <a href="#">
                 {{#> l-flex l-flex--modifier="pf-m-space-items-sm"}}
                   <span>12</span>
-                  <i class="fas fa-check-circle pf-v5-u-success-color-100" aria-hidden="true"></i>
+                  <i class="fas fa-check-circle {{pfv 'u'}}success-color-100" aria-hidden="true"></i>
                 {{/l-flex}}
               </a>
             {{/data-list-cell}}
@@ -86,7 +86,7 @@
               <a href="#">
                 {{#> l-flex l-flex--modifier="pf-m-space-items-sm"}}
                   <span>18</span>
-                  <i class="fas fa-check-circle pf-v5-u-success-color-100" aria-hidden="true"></i>
+                  <i class="fas fa-check-circle {{pfv 'u'}}success-color-100" aria-hidden="true"></i>
                 {{/l-flex}}
               </a>
             {{/data-list-cell}}
