--- a/src/patternfly/demos/Page/page-template-masthead-drilldown.hbs
+++ b/src/patternfly/demos/Page/page-template-masthead-drilldown.hbs
@@ -5,16 +5,16 @@
         {{#> menu-list-item menu-list-item--IsDisabled="true"}}
           {{#> menu-item}}
             {{#> menu-item-description}}
-              <div class="pf-v5-u-font-size-sm">Username:</div>
-              <div class="pf-v5-u-font-size-md">mshaksho@redhat.com</div>
+              <div class="{{pfv 'u'}}font-size-sm">Username:</div>
+              <div class="{{pfv 'u'}}font-size-md">mshaksho@redhat.com</div>
             {{/menu-item-description}}
           {{/menu-item}}
         {{/menu-list-item}}
         {{#> menu-list-item menu-list-item--IsDisabled="true"}}
           {{#> menu-item}}
             {{#> menu-item-description}}
-              <div class="pf-v5-u-font-size-sm">Account number:</div>
-              <div class="pf-v5-u-font-size-md">123456789</div>
+              <div class="{{pfv 'u'}}font-size-sm">Account number:</div>
+              <div class="{{pfv 'u'}}font-size-md">123456789</div>
             {{/menu-item-description}}
           {{/menu-item}}
         {{/menu-list-item}}
