--- a/src/patternfly/components/Table/table-td.hbs
+++ b/src/patternfly/components/Table/table-td.hbs
@@ -1,13 +1,13 @@
 <{{#if table-td--type}}{{table-td--type}}{{else}}td{{/if}} class="
-  {{~#if table-td--toggle}} pf-v5-c-table__toggle{{/if}}
-  {{~#if table-td--check}} pf-v5-c-table__check{{/if}}
-  {{~#if table-td--action}} pf-v5-c-table__action{{/if}}
-  {{~#if table-td--icon}} pf-v5-c-table__icon{{/if}}
-  {{~#if table-td--compound-expansion-toggle}} pf-v5-c-table__compound-expansion-toggle{{/if}}
-  {{~#if table-td--IsStickyColumn}} pf-v5-c-table__sticky-column{{/if}}
-  {{~#if table-td--IsFavorite}} pf-v5-c-table__favorite{{/if}}
+  {{~#if table-td--toggle}} {{pfv}}table__toggle{{/if}}
+  {{~#if table-td--check}} {{pfv}}table__check{{/if}}
+  {{~#if table-td--action}} {{pfv}}table__action{{/if}}
+  {{~#if table-td--icon}} {{pfv}}table__icon{{/if}}
+  {{~#if table-td--compound-expansion-toggle}} {{pfv}}table__compound-expansion-toggle{{/if}}
+  {{~#if table-td--IsStickyColumn}} {{pfv}}table__sticky-column{{/if}}
+  {{~#if table-td--IsFavorite}} {{pfv}}table__favorite{{/if}}
   {{~#if table-td--IsFavorited}} pf-m-favorited{{/if}}
-  {{~#if table-td--IsDraggable}} pf-v5-c-table__draggable{{/if}}
+  {{~#if table-td--IsDraggable}} {{pfv}}table__draggable{{/if}}
   {{~#if table-td--modifier}} {{table-td--modifier}}{{/if}}"
   {{#unless table-td--IsEmpty}}
     {{#unless table-td--type}}
