--- a/src/patternfly/components/Table/templates/table-tr--nested-column-header.hbs
+++ b/src/patternfly/components/Table/templates/table-tr--nested-column-header.hbs
@@ -26,19 +26,19 @@
   {{#> table-td table-td--data-label="Date & time"}}
     {{#> stack}}
       <span>June 22, 2021</span>
-      <span class="pf-v5-u-color-200">3:58:24 PM</span>
+      <span class="{{pfv 'u'}}color-200">3:58:24 PM</span>
     {{/stack}}
   {{/table-td}}
   {{#> table-td table-td--data-label="Source"}}
     {{#> stack}}
       <span>443</span>
-      <span class="pf-v5-u-color-200">(HTTPS)</span>
+      <span class="{{pfv 'u'}}color-200">(HTTPS)</span>
     {{/stack}}
   {{/table-td}}
   {{#> table-td table-td--data-label="Destination"}}
     {{#> stack}}
       <span>24</span>
-      <span class="pf-v5-u-color-200">(smtp)</span>
+      <span class="{{pfv 'u'}}color-200">(smtp)</span>
     {{/stack}}
   {{/table-td}}
   {{#> table-td table-td--data-label="Protocol"}}
