--- a/src/patternfly/demos/Card/templates/card-template-expandable-status-card.hbs
+++ b/src/patternfly/demos/Card/templates/card-template-expandable-status-card.hbs
@@ -1,7 +1,7 @@
 {{#> l-flex l-flex--modifier="pf-m-flex-1 pf-m-align-self-stretch pf-m-align-items-stretch"}}
   {{#> card card--modifier="pf-m-plain" l-flex--modifier=reset l-flex-item--modifier=reset}}
     {{#> card-body}}
-      {{#> l-flex l-flex--modifier="pf-m-column pf-v5-u-h-100 pf-m-space-items-sm"}}
+      {{#> l-flex l-flex--modifier="pf-m-column {{pfv 'u'}}h-100 pf-m-space-items-sm"}}
         {{#> l-flex l-flex--modifier="pf-m-space-items-sm pf-m-column-on-md pf-m-row-on-lg pf-m-spacer-md-on-md pf-m-spacer-sm-on-lg"}}
           {{#> label-group label-group--id="label-group-overflow"}}
             {{#> label-group-main}}
@@ -51,11 +51,11 @@
           {{/if}}
           {{#> l-flex l-flex--modifier="pf-m-space-items-sm pf-m-align-items-center pf-m-nowrap"}}
             {{#if card-template-expandable-status-card--RequiresReboot}}
-              <i class="pf-v5-icon pf-v5-icon-on pf-v5-u-danger-color-100" style="line-height: 1" aria-hidden="true"></i>
-              <p class="pf-v5-u-color-200">System reboot <b class="pf-v5-u-color-100">is</b> required</p>
+              <i class="pf-v5-icon pf-v5-icon-on {{pfv 'u'}}danger-color-100" style="line-height: 1" aria-hidden="true"></i>
+              <p class="{{pfv 'u'}}color-200">System reboot <b class="{{pfv 'u'}}color-100">is</b> required</p>
             {{else}}
-              <i class="pf-v5-icon pf-v5-icon-on pf-v5-u-color-400" style="line-height: 1" aria-hidden="true"></i>
-              <p class="pf-v5-u-color-200">System reboot <b class="pf-v5-u-color-100">is not</b> required</p>
+              <i class="pf-v5-icon pf-v5-icon-on {{pfv 'u'}}color-400" style="line-height: 1" aria-hidden="true"></i>
+              <p class="{{pfv 'u'}}color-200">System reboot <b class="{{pfv 'u'}}color-100">is not</b> required</p>
             {{/if}}
           {{/l-flex}}
         {{/l-flex}}
