--- a/src/patternfly/demos/Card/templates/card-template-status.hbs
+++ b/src/patternfly/demos/Card/templates/card-template-status.hbs
@@ -9,7 +9,7 @@
       {{#> gallery gallery--modifier="pf-m-gutter" gallery--attribute='style="--pf-v5-l-gallery--GridTemplateColumns--min: 100%; --pf-v5-l-gallery--GridTemplateColumns--min-on-sm: 180px; --pf-v5-l-gallery--GridTemplateColumns--min-on-lg: 150px; --pf-v5-l-gallery--GridTemplateColumns--max-on-sm: 1fr;"'}}
         {{#> l-flex l-flex--modifier="pf-m-space-items-sm pf-m-nowrap"}}
           {{#> l-flex-item}}
-            <i class="fas fa-check-circle pf-v5-u-success-color-100" aria-hidden="true"></i>
+            <i class="fas fa-check-circle {{pfv 'u'}}success-color-100" aria-hidden="true"></i>
           {{/l-flex-item}}
           {{#> l-flex-item}}
             <span>Cluster</span>
@@ -17,7 +17,7 @@
         {{/l-flex}}
         {{#> l-flex l-flex--modifier="pf-m-space-items-sm pf-m-nowrap"}}
           {{#> l-flex-item}}
-            <i class="fas fa-exclamation-circle pf-v5-u-danger-color-100" aria-hidden="true"></i>
+            <i class="fas fa-exclamation-circle {{pfv 'u'}}danger-color-100" aria-hidden="true"></i>
           {{/l-flex-item}}
           {{#> l-flex-item l-flex-item--modifier="pf-v5-u-text-nowrap"}}
             <span class="popover-parent">
@@ -28,7 +28,7 @@
         {{/l-flex}}
         {{#> l-flex l-flex--modifier="pf-m-space-items-sm pf-m-nowrap"}}
           {{#> l-flex-item l-flex-item--modifier="pf-v5-u-text-nowrap"}}
-            <i class="fas fa-exclamation-circle pf-v5-u-danger-color-100" aria-hidden="true"></i>
+            <i class="fas fa-exclamation-circle {{pfv 'u'}}danger-color-100" aria-hidden="true"></i>
           {{/l-flex-item}}
           {{#> l-flex l-flex--modifier="pf-m-column pf-m-space-items-none"}}
             {{#> l-flex-item}}
@@ -41,33 +41,33 @@
         {{/l-flex}}
         {{#> l-flex l-flex--modifier="pf-m-space-items-sm pf-m-nowrap"}}
           {{#> l-flex-item}}
-            <i class="fas fa-check-circle pf-v5-u-success-color-100" aria-hidden="true"></i>
+            <i class="fas fa-check-circle {{pfv 'u'}}success-color-100" aria-hidden="true"></i>
           {{/l-flex-item}}
           {{#> l-flex l-flex--modifier="pf-m-column pf-m-space-items-none"}}
             {{#> l-flex-item}}
               <a href="#">Image Vulnerabilities</a>
             {{/l-flex-item}}
             {{#> l-flex-item}}
-              <span class="pf-v5-u-color-200">0 vulnerabilities</span>
+              <span class="{{pfv 'u'}}color-200">0 vulnerabilities</span>
             {{/l-flex-item}}
           {{/l-flex}}
         {{/l-flex}}
         {{#> l-flex l-flex--modifier="pf-m-space-items-sm pf-m-nowrap"}}
           {{#> l-flex-item}}
-            <i class="fas fa-check-circle pf-v5-u-success-color-100" aria-hidden="true"></i>
+            <i class="fas fa-check-circle {{pfv 'u'}}success-color-100" aria-hidden="true"></i>
           {{/l-flex-item}}
           {{#> l-flex l-flex--modifier="pf-m-column pf-m-space-items-none"}}
             {{#> l-flex-item}}
               <a href="#">Storage</a>
             {{/l-flex-item}}
             {{#> l-flex-item}}
-              <span class="pf-v5-u-color-200">Degraded</span>
+              <span class="{{pfv 'u'}}color-200">Degraded</span>
             {{/l-flex-item}}
           {{/l-flex}}
         {{/l-flex}}
         {{#> l-flex l-flex--modifier="pf-m-space-items-sm pf-m-nowrap"}}
           {{#> l-flex-item}}
-            <i class="fas fa-check-circle pf-v5-u-success-color-100" aria-hidden="true"></i>
+            <i class="fas fa-check-circle {{pfv 'u'}}success-color-100" aria-hidden="true"></i>
           {{/l-flex-item}}
           {{#> l-flex l-flex--modifier="pf-m-column pf-m-space-items-none"}}
             {{#> l-flex-item}}
@@ -77,7 +77,7 @@
         {{/l-flex}}
         {{#> l-flex l-flex--modifier="pf-m-space-items-sm pf-m-nowrap"}}
           {{#> l-flex-item}}
-            <i class="fas fa-check-circle pf-v5-u-success-color-100" aria-hidden="true"></i>
+            <i class="fas fa-check-circle {{pfv 'u'}}success-color-100" aria-hidden="true"></i>
           {{/l-flex-item}}
           {{#> l-flex l-flex--modifier="pf-m-column pf-m-space-items-none"}}
             {{#> l-flex-item}}
