--- a/src/patternfly/demos/DescriptionList/description-list-template.hbs
+++ b/src/patternfly/demos/DescriptionList/description-list-template.hbs
@@ -22,7 +22,7 @@
     {{#> description-list-description}}
       {{#> l-flex l-flex--modifier="pf-m-space-items-sm"}}
         {{#> l-flex-item}}
-          <i class="fas fa-check-circle pf-v5-u-success-color-100" aria-hidden="true"></i>
+          <i class="fas fa-check-circle {{pfv 'u'}}success-color-100" aria-hidden="true"></i>
         {{/l-flex-item}}
         {{#> l-flex-item}}
           <span>Active</span>
@@ -37,7 +37,7 @@
       {{/description-list-text}}
     {{/description-list-term}}
     {{#> description-list-description}}
-      <span class="pf-v5-u-color-300">Not configured</span>
+      <span class="{{pfv 'u'}}color-300">Not configured</span>
     {{/description-list-description}}
   {{/description-list-group}}
   {{#> description-list-group}}
