--- a/src/patternfly/base/_variables.scss
+++ b/src/patternfly/base/_variables.scss
@@ -285,18 +285,18 @@
 }
 
 // RedHatFont updated font overrides
-.pf-m-redhat-updated-font {
+.#{$pf-prefix}m-redhat-updated-font {
   --#{$pf-global}--FontFamily--sans-serif: var(--#{$pf-global}--FontFamily--redhat-updated--sans-serif);
   --#{$pf-global}--FontFamily--heading--sans-serif: var(--#{$pf-global}--FontFamily--redhat-updated--heading--sans-serif);
 }
 
 // RedHatMono font overrides
-.pf-m-redhatmono-font {
+.#{$pf-prefix}m-redhatmono-font {
   --#{$pf-global}--FontFamily--monospace: var(--#{$pf-global}--FontFamily--redhat--monospace);
 }
 
 // RedHat variable font overrides
-.pf-m-redhatVF-font {
+.#{$pf-prefix}m-redhatVF-font {
   --#{$pf-global}--FontFamily--sans-serif: var(--#{$pf-global}--FontFamily--redhatVF--sans-serif);
   --#{$pf-global}--FontFamily--heading--sans-serif: var(--#{$pf-global}--FontFamily--redhatVF--heading--sans-serif);
   --#{$pf-global}--FontFamily--monospace: var(--#{$pf-global}--FontFamily--redhatVF--monospace);
