chore(alert): combined alert and alert group docs

--- a/src/patternfly/components/_all.scss
+++ b/src/patternfly/components/_all.scss
@@ -2,7 +2,7 @@
 @import "./Accordion/accordion";
 @import "./ActionList/action-list";
 @import "./Alert/alert";
-@import "./AlertGroup/alert-group";
+@import "./Alert/alert-group";
 @import "./AppLauncher/app-launcher";
 @import "./Avatar/avatar";
 @import "./Backdrop/backdrop";
