chore(spinner): remove isSVG from other examples

--- a/src/patternfly/components/Dropdown/dropdown-toggle-progress.hbs
+++ b/src/patternfly/components/Dropdown/dropdown-toggle-progress.hbs
@@ -2,5 +2,5 @@
   {{#if dropdown-toggle-progress--attribute}}
     {{{dropdown-toggle-progress--attribute}}}
   {{/if}}>
-  {{> spinner spinner--IsSvg="true"}}
+  {{> spinner}}
 </span>
